--- a/AbestoMediaToolKit/Abesto.MediaToolKit.API.csproj
+++ b/AbestoMediaToolKit/Abesto.MediaToolKit.API.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Refit" Version="7.0.0" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
